fix: improve alignment, add new logo

--- a/06-signup-form/style.css
+++ b/06-signup-form/style.css
@@ -9,7 +9,7 @@
 
 }
 
-/* Fonts END */
+/* fonts END */
 
 
 .main {
@@ -19,10 +19,34 @@
 }
 
 .background-img {
-  border: 5px solid black;
-  height: 130vh;
+  border: 5px solid rgb(212, 3, 195);
+  height: 100vh;
   width: 100vw;
   background-image: url(assets/wallpaper.jpeg);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.img-credit, .img-credit > a{
+  color: aliceblue;
+}
+
+.img-credit{
+  position: absolute;
+  bottom: 0px;
+}
+
+.overlay{
+  display:flex;
+  justify-content: center;
+  /* flex-direction: column; */
+  background-color: #da02c83f;
+}
+
+
+.overlay > img{
+  height: 170px;
 }
 
 .content {
@@ -37,11 +61,12 @@
 .heading {
   /* border: 5px solid magenta; */
   display: flex;
-  flex: 1 1 auto;
+  /* flex: 1 1 0; */
   justify-content: center;
   align-items: center;
   font-size: larger;
   margin: 20px;
+  margin-bottom: 100px;
 }
 
 .login {
@@ -96,14 +121,14 @@ input{
 .submit-btn > button{
   width: auto;
   display: inline-block;
-  background-color: #0e7c12; /* Green background */
+  background-color: #b15416; /* Green background */
   color: rgb(255, 255, 255);
   border-radius: 5px;
 }
 
 .submit-btn {
   position: absolute;
-  top: 930px;
+  top: 620px;
 }
 
 .login{
@@ -112,15 +137,15 @@ input{
 }
 
 .login > a:link{
-  color: #0ace11;
+  color: #c85b13;
 }
 
 .login > a:visited{
-  color: #025004;
+  color: #c85b13;
 }
 
 .login > a:hover{
-  color: rgb(10, 170, 170);
+  color: #ff6804;
 }
 
 input[type="password"]:invalid {
